[gd_scene load_steps=11 format=3 uid="uid://cv6784jwmo40"]

[ext_resource type="Script" uid="uid://bcaxw4ao18dwf" path="res://scenes/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://q8detdwy65ce" path="res://assets/main_menu/Start_BTN.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://d2usth3dlmejv" path="res://assets/background_image.jpg" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://b3tixkt7dqbh2" path="res://assets/main_menu/title.png" id="4_wu84c"]
[ext_resource type="FontFile" uid="uid://il5j58i47wl6" path="res://assets/font/VeniteAdoremusStraight-Yzo6v.ttf" id="6_oa1go"]
[ext_resource type="Theme" uid="uid://dpj4c4ky8q4nn" path="res://UI_theme.tres" id="6_rtw2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.271082, 0.0790171, 0.455147, 1)
skew = Vector2(-0.1, 0)
border_color = Color(0, 0.74902, 1, 1)
corner_radius_top_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.664969, 0.00271573, 0.910082, 0.666667)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbmy8"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_right = 15.0
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk1qb"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_right = 15.0
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1go"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 15.0
expand_margin_right = 15.0
shadow_size = 15

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ln24")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1151.0
offset_right = 1151.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ln24")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 17.0
offset_right = 1250.0
offset_bottom = 730.0
grow_horizontal = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_wu84c")

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 1.00003
offset_right = 346.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.35, 0.35)
theme_type_variation = &"FlatButton"
icon = ExtResource("2_ekxnf")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -71.0
offset_right = 205.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_rtw2f")
placeholder_text = "Enter Your Name"
draw_control_chars = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -321.0
offset_top = -266.0
offset_right = 320.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rtw2f")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 30
text = "High Scores"
horizontal_alignment = 1

[node name="Colums" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/Colums"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.606933, 0.174099, 0.827298, 1)
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 23
text = "      Name"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Colums"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.606933, 0.174099, 0.827298, 1)
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 23
text = "Score"

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Colums"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.606933, 0.174099, 0.827298, 1)
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 23
text = "Rank"

[node name="User1" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 92
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/User1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer/User1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel/VBoxContainer/User1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="User2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 92
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/User2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer/User2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel/VBoxContainer/User2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="User3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 92
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/User3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer/User3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel/VBoxContainer/User3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="User4" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 92
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/User4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer/User4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel/VBoxContainer/User4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="User5" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 92
alignment = 1

[node name="Name" type="Label" parent="Panel/VBoxContainer/User5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Score" type="Label" parent="Panel/VBoxContainer/User5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Rank" type="Label" parent="Panel/VBoxContainer/User5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Warning" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -16.0
offset_right = 77.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.439783, 0.00222749, 0.744322, 1)
theme_override_colors/font_outline_color = Color(0, 0.668021, 0.443298, 1)
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_font_sizes/font_size = 13
text = "Please Enter Your Name"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -154.0
offset_top = 13.0
offset_right = -18.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("6_oa1go")
theme_override_styles/focus = SubResource("StyleBoxFlat_tbmy8")
theme_override_styles/hover = SubResource("StyleBoxFlat_jk1qb")
theme_override_styles/normal = SubResource("StyleBoxFlat_oa1go")
text = "Clear Score"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
